console cleanups and improvements
variety of changes to improve console logging when app is run
and when tests are run