@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -14,7 +15,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Holiday Guard</name>
 	<description>A REST service for managing holidays and business days</description>
-
 	<url>https://github.com/jw1/holiday-guard</url>
 
 	<licenses>
@@ -27,24 +27,29 @@
 	<developers>
 		<developer>
 			<id>jw1</id>
-			<name>James</name>
+			<name>James Warlick</name>
 			<url>https://github.com/jw1</url>
 		</developer>
 	</developers>
 
 	<scm>
 		<connection>scm:git:git://github.com/jw1/holiday-guard.git</connection>
-		<developerConnection>scm:git:ssh://github.com:jw1/holiday-guard.git</developerConnection>
+		<developerConnection>scm:git:ssh://github.com/jw1/holiday-guard.git</developerConnection>
 		<tag>HEAD</tag>
 		<url>https://github.com/jw1/holiday-guard</url>
 	</scm>
 
 	<properties>
 		<java.version>21</java.version>
+		<!-- Shared JVM args for tests (Surefire, Failsafe, etc.) -->
+		<argLine>
+			-XX:+EnableDynamicAgentLoading
+			--add-opens java.base/java.lang=ALL-UNNAMED
+			--add-opens java.base/java.util=ALL-UNNAMED
+		</argLine>
 	</properties>
 
 	<dependencies>
-
 		<!-- spring boot starters -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -63,14 +68,14 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- start with in-memory db -->
+		<!-- Start with in-memory db -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- test dependencies -->
+		<!-- Test dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -86,31 +91,35 @@
 
 	<build>
 		<plugins>
+
+			<!-- javac will complain about annotation processing, so enable for lombok -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
+					<compilerArgs>
+						<arg>-proc:full</arg>
+					</compilerArgs>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
+
+			<!-- Unit & integration test plugins will both pick up argLine -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
